--- a/source/index.html
+++ b/source/index.html
@@ -318,8 +318,10 @@
               </div>
               <div class="chat__footer">
                 <form action="#" method="post" class="form" id="message-form">
-                  <label for="message-field" class="visually-hidden">Поле для ввода вопроса</label>
-                  <input type="text" class="form__field" id="message-field">
+                  <div class="form__field-container">
+                    <label for="message-field" class="visually-hidden">Поле для ввода вопроса</label>
+                    <input type="text" class="form__field" id="message-field">
+                  </div>
                   <button class="form__button btn">
                     Узнать
                     <svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -378,8 +380,10 @@
           </div>
           <div class="result__form">
             <form action="#" method="post" class="form form--result">
-              <label for="email-field" class="form__label">зарегистрируй результат</label>
-              <input type="email" class="form__field" id="email-field" placeholder="e-mail для регистации результата и получения приза" required>
+              <div class="form__field-container">
+                <label for="email-field" class="visually-hidden">зарегистрируй результат</label>
+                <input type="email" class="form__field" id="email-field" placeholder="e-mail для регистации результата и получения приза" required>
+              </div>
               <button class="form__button btn">
                 отправить
                 <svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -430,8 +434,10 @@
           </div>
           <div class="result__form">
             <form action="#" method="post" class="form form--result">
-              <label for="email-field2" class="form__label">зарегистрируй результат</label>
-              <input type="email" class="form__field" id="email-field2" placeholder="e-mail для регистации результата и получения приза" required>
+              <div class="form__field-container">
+                <label for="email-field2" class="visually-hidden">зарегистрируй результат</label>
+                <input type="email" class="form__field" id="email-field2" placeholder="e-mail для регистации результата и получения приза" required>
+              </div>
               <button class="form__button btn">
                 отправить
                 <svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
