--- a/source/index.html
+++ b/source/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Mysterious Vacation</title>
+  <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
 </head>
 <body>
 
@@ -285,7 +286,9 @@
               <p>&laquo;Соня&raquo; может отвечать только&nbsp;Да или Нет</p>
             </li>
           </ol>
-          <a href="#game" class="rules__link btn">Погнали!</a>
+          <a href="#game" class="rules__link btn">
+            <span>Погнали!</span>
+          </a>
         </div>
       </div>
       <div class="screen__disclaimer">
