--- a/source/index.html
+++ b/source/index.html
@@ -83,7 +83,10 @@
     <section class="screen screen--hidden screen--intro" id="top">
       <div class="screen__wrapper">
         <div class="intro">
-          <h1 class="intro__title">Таинственный отпуск</h1>
+          <h1 class="intro__title">
+            Таинственный
+            отпуск
+          </h1>
           <div class="intro__content">
             <div class="intro__info">
               <p class="intro__label">Даты проведения конкурса:</p>
@@ -187,7 +190,7 @@
     <section class="screen screen--hidden screen--prizes" id="prizes">
       <div class="screen__wrapper">
         <div class="prizes">
-          <h2 class="prizes__title">ПРизы</h2>
+          <h2 class="prizes__title">Призы</h2>
           <div class="prizes__lead">
             <p>Найди ответ и&nbsp;получи один из&nbsp;призов:</p>
           </div>
