--- a/5/index.html
+++ b/5/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Mysterious Vacation</title>
-  <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
 <link href="css/style.min.css" rel="stylesheet">  <base href="https://htmlacademy-animation.github.io/816829-magic-vacation-1/5/">
 </head>
 <body>
