fixup! Выполняет задание 6, часть 2 - Оживляем экран «Победа»

--- a/source/index.html
+++ b/source/index.html
@@ -292,7 +292,8 @@
                 <form action="#" method="post" class="form" id="message-form">
                   <div class="form__field-container">
                     <label for="message-field" class="visually-hidden">Поле для ввода вопроса</label>
-                    <input type="text" class="form__field" id="message-field">
+                    <span class="form__field form__field--background"></span>
+                    <input type="text" class="form__field form__field--input" id="message-field">
                   </div>
                   <button class="form__button btn">
                     Узнать
@@ -332,7 +333,8 @@
             <form action="#" method="post" class="form form--result">
               <div class="form__field-container">
                 <label for="email-field" class="visually-hidden">зарегистрируй результат</label>
-                <input type="email" class="form__field" id="email-field" placeholder="e-mail для регистации результата и получения приза" required>
+                <span class="form__field form__field--background"></span>
+                <input type="email" class="form__field form__field--input" id="email-field" placeholder="e-mail для регистации результата и получения приза" required>
               </div>
               <button class="form__button btn">
                 отправить
@@ -365,7 +367,8 @@
             <form action="#" method="post" class="form form--result">
               <div class="form__field-container">
                 <label for="email-field2" class="visually-hidden">зарегистрируй результат</label>
-                <input type="email" class="form__field" id="email-field2" placeholder="e-mail для регистации результата и получения приза" required>
+                <span class="form__field form__field--background"></span>
+                <input type="email" class="form__field form__field--input" id="email-field2" placeholder="e-mail для регистации результата и получения приза" required>
               </div>
               <button class="form__button btn">
                 <span>отправить</span>
