--- a/5/index.html
+++ b/5/index.html
@@ -342,7 +342,8 @@
                 <form action="#" method="post" class="form" id="message-form">
                   <div class="form__field-container">
                     <label for="message-field" class="visually-hidden">Поле для ввода вопроса</label>
-                    <input type="text" class="form__field" id="message-field">
+                    <span class="form__field form__field--background"></span>
+                    <input type="text" class="form__field form__field--input" id="message-field" placeholder="hello">
                   </div>
                   <button class="form__button btn">
                     Узнать
@@ -395,7 +396,8 @@
             <form action="#" method="post" class="form form--result">
               <div class="form__field-container">
                 <label for="email-field" class="visually-hidden">зарегистрируй результат</label>
-                <input type="email" class="form__field" id="email-field" placeholder="e-mail для регистации результата и получения приза" required="">
+                <span class="form__field form__field--background"></span>
+                <input type="email" class="form__field form__field--input" id="email-field" placeholder="e-mail для регистации результата и получения приза" required="">
               </div>
               <button class="form__button btn">
                 отправить
@@ -441,7 +443,8 @@
             <form action="#" method="post" class="form form--result">
               <div class="form__field-container">
                 <label for="email-field2" class="visually-hidden">зарегистрируй результат</label>
-                <input type="email" class="form__field" id="email-field2" placeholder="e-mail для регистации результата и получения приза" required="">
+                <span class="form__field form__field--background"></span>
+                <input type="email" class="form__field form__field--input" id="email-field2" placeholder="e-mail для регистации результата и получения приза" required="">
               </div>
               <button class="form__button btn">
                 <span>отправить</span>
