:heavy_check_mark: Сборка #5

--- a/5/index.html
+++ b/5/index.html
@@ -343,7 +343,7 @@
                   <div class="form__field-container">
                     <label for="message-field" class="visually-hidden">Поле для ввода вопроса</label>
                     <span class="form__field form__field--background"></span>
-                    <input type="text" class="form__field form__field--input" id="message-field" placeholder="hello">
+                    <input type="text" class="form__field form__field--input" id="message-field">
                   </div>
                   <button class="form__button btn">
                     Узнать
