Выполняет задание 7 - Вкатываем кнопки слайдера

--- a/source/index.html
+++ b/source/index.html
@@ -20,19 +20,19 @@
         <div class="page-header__menu js-menu" id="menu">
           <ul>
             <li>
-              <a class="js-menu-link active" href="#top" data-href="top">главная</a>
+              <a class="js-menu-link active" href="#top" data-screen-id="top">главная</a>
             </li>
             <li>
-              <a class="js-menu-link" href="#story" data-href="story">история</a>
+              <a class="js-menu-link" href="#story" data-screen-id="story">история</a>
             </li>
             <li>
-              <a class="js-menu-link" href="#prizes" data-href="prizes">призы</a>
+              <a class="js-menu-link" href="#prizes" data-screen-id="prizes">призы</a>
             </li>
             <li>
-              <a class="js-menu-link" href="#rules" data-href="rules">правила</a>
+              <a class="js-menu-link" href="#rules" data-screen-id="rules">правила</a>
             </li>
             <li>
-              <a class="js-menu-link" href="#game" data-href="game">игра</a>
+              <a class="js-menu-link" href="#game" data-screen-id="game">игра</a>
             </li>
           </ul>
         </div>
@@ -90,22 +90,24 @@
         </div>
       </div>
       <div class="screen__footer js-footer">
-        <button class="screen__footer-enlarge js-footer-toggler" type="button" aria-label="Показать сообщение">
-          <include src="./img/icons/star.svg"></include>
-        </button>
-        <button class="screen__footer-collapse js-footer-toggler" type="button" aria-label="Скрыть сообщение">
-          <include src="./img/icons/cross.svg"></include>
-        </button>
-        <div class="screen__footer-wrapper">
-          <div class="screen__footer-announce">
-            <p class="screen__footer-label">Даты проведения конкурса:</p>
-            <p class="screen__footer-date">01 — 31.05 / 2020</p>
-          </div>
-          <div class="screen__footer-note">
-            <p>
-              <include src="./img/icons/star.svg"></include>
-              <span>Победители могут выбрать любые 14 дней подряд в&nbsp;течение двух лет с&nbsp;даты окончания конкурса. Победители могут воспользоваться путевкой сами или подарить другому лицу.</span>
-            </p>
+        <div class="screen__footer-container">
+          <button class="screen__footer-enlarge js-footer-toggler" type="button" aria-label="Показать сообщение">
+            <include src="./img/icons/star.svg"></include>
+          </button>
+          <button class="screen__footer-collapse js-footer-toggler" type="button" aria-label="Скрыть сообщение">
+            <include src="./img/icons/cross.svg"></include>
+          </button>
+          <div class="screen__footer-wrapper">
+            <div class="screen__footer-announce">
+              <p class="screen__footer-label">Даты проведения конкурса:</p>
+              <p class="screen__footer-date">01 — 31.05 / 2020</p>
+            </div>
+            <div class="screen__footer-note">
+              <p>
+                <include src="./img/icons/star.svg"></include>
+                <span>Победители могут выбрать любые 14 дней подряд в&nbsp;течение двух лет с&nbsp;даты окончания конкурса. Победители могут воспользоваться путевкой сами или подарить другому лицу.</span>
+              </p>
+            </div>
           </div>
         </div>
       </div>
@@ -213,22 +215,24 @@
         </div>
       </div>
       <div class="screen__footer js-footer">
-        <button class="screen__footer-enlarge js-footer-toggler" type="button" aria-label="Показать сообщение">
-          <include src="./img/icons/star.svg"></include>
-        </button>
-        <button class="screen__footer-collapse js-footer-toggler" type="button" aria-label="Скрыть сообщение">
-          <include src="./img/icons/cross.svg"></include>
-        </button>
-        <div class="screen__footer-wrapper">
-          <div class="screen__footer-announce">
-            <p class="screen__footer-label">Даты проведения конкурса:</p>
-            <p class="screen__footer-date">01 — 31.05 / 2020</p>
-          </div>
-          <div class="screen__footer-note">
-            <p>
-              <include src="./img/icons/star.svg"></include>
-              <span>Скидка&nbsp;15% на&nbsp;единоразовое приобретение путёвки с&nbsp;1&nbsp;июня 2020 по&nbsp;31&nbsp;мая 2022&nbsp;года. Суммируется с&nbsp;другими акциями</span>
-            </p>
+        <div class="screen__footer-container">
+          <button class="screen__footer-enlarge js-footer-toggler" type="button" aria-label="Показать сообщение">
+            <include src="./img/icons/star.svg"></include>
+          </button>
+          <button class="screen__footer-collapse js-footer-toggler" type="button" aria-label="Скрыть сообщение">
+            <include src="./img/icons/cross.svg"></include>
+          </button>
+          <div class="screen__footer-wrapper">
+            <div class="screen__footer-announce">
+              <p class="screen__footer-label">Даты проведения конкурса:</p>
+              <p class="screen__footer-date">01 — 31.05 / 2020</p>
+            </div>
+            <div class="screen__footer-note">
+              <p>
+                <include src="./img/icons/star.svg"></include>
+                <span>Скидка&nbsp;15% на&nbsp;единоразовое приобретение путёвки с&nbsp;1&nbsp;июня 2020 по&nbsp;31&nbsp;мая 2022&nbsp;года. Суммируется с&nbsp;другими акциями</span>
+              </p>
+            </div>
           </div>
         </div>
       </div>
@@ -394,7 +398,7 @@
             <include src="./img/lose-heading.svg"></include>
           </h2>
           <button class="result__button js-play" type="button">
-            не сдавайся!
+            <b>не сдавайся!</b>
             <span>
               <include src="./img/icons/reload.svg"></include>
             </span>
