--- a/source/index.html
+++ b/source/index.html
@@ -190,7 +190,14 @@
                 <span>загадочных путешествия</span>
               </p>
             </li>
+
             <li class="prizes__item prizes__item--cases">
+              <template id="cases-landscape-icon-template">
+                <include src="./img/prize2--animate.svg"></include>
+              </template>
+              <template id="cases-portrait-icon-template">
+                <include src="./img/prize2-mob.svg"></include>
+              </template>
               <div class="prizes__icon">
                 <picture>
                   <source srcset="img/prize2-mob.svg" media="(orientation: portrait)">
@@ -202,7 +209,14 @@
                 <span>надежных чемоданов</span>
               </p>
             </li>
+
             <li class="prizes__item prizes__item--codes">
+              <template id="codes-landscape-icon-template">
+                <include src="./img/prize3--animate.svg"></include>
+              </template>
+              <template id="codes-portrait-icon-template">
+                <include src="./img/prize3-mob.svg"></include>
+              </template>
               <div class="prizes__icon">
                 <picture>
                   <source srcset="img/prize3-mob.svg" media="(orientation: portrait)">
