--- a/source/index.html
+++ b/source/index.html
@@ -186,7 +186,7 @@
                 </picture>
               </div>
               <p class="prizes__desc">
-                <b>3</b>
+                <b data-current-number="3" data-final-number="3" aria-label="3"></b>
                 <span>загадочных путешествия</span>
               </p>
             </li>
@@ -205,7 +205,7 @@
                 </picture>
               </div>
               <p class="prizes__desc">
-                <b>7</b>
+                <b data-current-number="7" data-final-number="7" aria-label="7"></b>
                 <span>надежных чемоданов</span>
               </p>
             </li>
@@ -224,7 +224,7 @@
                 </picture>
               </div>
               <p class="prizes__desc">
-                <b>900</b>
+                <b data-current-number="900" data-final-number="900" aria-label="900"></b>
                 <span>
                   промокодов на&nbsp;скидку 15%
                   <include src="./img/icons/star.svg"></include>
